--- a/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
+++ b/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
@@ -18,8 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.7-beta01" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0" />
   </ItemGroup>
@@ -36,7 +36,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</PackageId>
-      <Version>1.1.4</Version>
+      <Version>1.1.5</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -46,7 +46,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        1.1.4 Bump
+        1.1.5 Bump
         1.1.0 Dropped support for net461, now has net472 as minimum
         1.0.63 Updated nugets to avoid versions with security risks
         1.0.62 Bump
