--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -36,7 +36,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.UnitTest</PackageId>
-    <Version>1.2.49-beta01</Version>
+    <Version>1.2.49</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
