--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -27,9 +27,9 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.5-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.5" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +56,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.25.4-beta01</Version>
+    <Version>6.25.4</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
