--- a/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests/WorkflowEngine.Sdk.UnitTests.csproj
@@ -28,7 +28,7 @@
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Shouldly" Version="4.1.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
