--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -25,8 +25,8 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.7.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Azure" Version="3.9.3" />
-    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="3.1.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Azure" Version="3.9.4" />
+    <PackageReference Include="Nexus.Link.Libraries.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,7 +48,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.Persistence.Sql</PackageId>
-    <Version>2.9.1</Version>
+    <Version>2.9.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -58,6 +58,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.9.2 Bump
       2.9.1 Added support for fallback strategy of saving workflow state
       2.8.6 Bump
       2.8.0 Added Activity.IterationTitle.
