--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -26,10 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.5" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.5" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.6" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.16.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +56,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.25.4</Version>
+    <Version>6.25.5</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -66,6 +66,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.25.5 The lock on the workflow instance is now done before loading the data
       6.25.4 Bug fixes while using the beta version
       6.25.1 Moved abstract things from here into the abstract project
       6.25.0 Added support for fallback strategy of saving workflow state
