--- a/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
+++ b/src/Misc.AspNet.Sdk/Misc.AspNet.Sdk.csproj
@@ -34,13 +34,13 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Capabilities.AsyncRequestMgmt.Abstract" Version="4.3.0" />
     <PackageReference Include="Nexus.Link.Contracts.Misc.AspNet.Sdk" Version="1.0.13" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.6" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.4.9" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.30.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.5.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Misc.AspNet.Sdk</PackageId>
-    <Version>1.3.10</Version>
+    <Version>1.4.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -50,15 +50,16 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.3.10 Bump
-      1.3.2 Added ReportHttpClientExceptions to NexusLinkMiddleware
-      1.2.4 Bump
-      1.2.0 Can detect other instances of AM mock
-      1.1.2 Updated nugets to avoid versions with security risks
-      1.1.1 ConvertExceptionToResponse now can convert FulcrumHttpRedirectException to HTTP response
-      1.0.4 Bump
-      1.0.0 First release
-    </PackageReleaseNotes>
+		1.4.0 Use FulcrumApplication.Context.RequestStopwatch
+		1.3.10 Bump
+		1.3.2 Added ReportHttpClientExceptions to NexusLinkMiddleware
+		1.2.4 Bump
+		1.2.0 Can detect other instances of AM mock
+		1.1.2 Updated nugets to avoid versions with security risks
+		1.1.1 ConvertExceptionToResponse now can convert FulcrumHttpRedirectException to HTTP response
+		1.0.4 Bump
+		1.0.0 First release
+	</PackageReleaseNotes>
   </PropertyGroup>
 
   <!-- Automatic generation of local alpha packages -->
