--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -26,10 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.29.6" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.8" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.30.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.13.9" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.18.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.0.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +56,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.31.0</Version>
+    <Version>6.31.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -66,6 +66,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.31.1 Bump
       6.31.0 Now reads all responses from AM in one read. Added ToString for MethodParameter and MethodArgument. Modified how we set arguments
       6.30.0 Added InstanceId and FormId to WorkflowImplementation
       6.29.2 Bump
